--- a/ui/FormChiBo.ui
+++ b/ui/FormChiBo.ui
@@ -239,7 +239,7 @@
     </property>
    </widget>
   </widget>
-  <widget class="QTableWidget" name="tblChiBo">
+  <widget class="QTableWidget" name="tableData">
    <property name="enabled">
     <bool>true</bool>
    </property>
