--- a/ui/FormDangVien.ui
+++ b/ui/FormDangVien.ui
@@ -732,7 +732,7 @@
    <widget class="QPushButton" name="buttonThem">
     <property name="geometry">
      <rect>
-      <x>130</x>
+      <x>40</x>
       <y>20</y>
       <width>151</width>
       <height>41</height>
@@ -754,7 +754,7 @@
    <widget class="QPushButton" name="buttonSua">
     <property name="geometry">
      <rect>
-      <x>350</x>
+      <x>210</x>
       <y>20</y>
       <width>151</width>
       <height>41</height>
@@ -776,7 +776,7 @@
    <widget class="QPushButton" name="buttonXoa">
     <property name="geometry">
      <rect>
-      <x>570</x>
+      <x>380</x>
       <y>20</y>
       <width>151</width>
       <height>41</height>
@@ -795,10 +795,54 @@
      <string>XÓA</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="buttonNhap">
+    <property name="geometry">
+     <rect>
+      <x>550</x>
+      <y>20</y>
+      <width>151</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
+    <property name="text">
+     <string>NHẬP</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="buttonXuat">
+    <property name="geometry">
+     <rect>
+      <x>720</x>
+      <y>20</y>
+      <width>151</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
+    <property name="text">
+     <string>XUẤT</string>
+    </property>
+   </widget>
    <widget class="QPushButton" name="buttonLamMoi">
     <property name="geometry">
      <rect>
-      <x>790</x>
+      <x>890</x>
       <y>20</y>
       <width>151</width>
       <height>41</height>
