--- a/ui/FormDangNhap.ui
+++ b/ui/FormDangNhap.ui
@@ -140,7 +140,7 @@
      <string>ĐĂNG NHẬP</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="exitButton">
+   <widget class="QPushButton" name="guestButton">
     <property name="geometry">
      <rect>
       <x>580</x>
@@ -153,7 +153,7 @@
      <cursorShape>PointingHandCursor</cursorShape>
     </property>
     <property name="text">
-     <string>THOÁT</string>
+     <string>NGƯỜI XEM (GUEST)</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_4">
